--- a/src/main.scss
+++ b/src/main.scss
@@ -465,9 +465,16 @@ h5 {
 }
 
 h4 {
-    text-align: center;
-    width: 100%;
-    font-size: 30px;
+   text-align: center;
+   font-size: 40px;
+   position: relative;
+   margin-top: 50px;
+   margin-bottom: 0;
+}
+
+.newMap{
+   margin-top: 0px;
+   margin-bottom: 75px;
 }
 
 .statepage__map{
@@ -487,8 +494,15 @@ h4 {
 }
 
 .chart__header{
-   margin-top: 850px;
+   margin-top: 100px;
    margin-bottom: 50px;
    text-align: center;
    font-size: 30px;
+}
+
+.statepage__currentMap{
+   margin-left: auto;
+   margin-right: auto;
+   display: block;
+   width:50%;
 }
