--- a/src/main.scss
+++ b/src/main.scss
@@ -477,6 +477,15 @@ h4 {
    margin-bottom: 75px;
 }
 
+.caliDistrictMapHeader{
+   margin-bottom: 20px;
+}
+
+.newMapCali{
+   margin-top: 100px;
+   margin-bottom: 75px;
+}
+
 .statepage__map{
    display: block;
    margin-left: auto;
