--- a/src/main.scss
+++ b/src/main.scss
@@ -500,6 +500,7 @@ h4 {
    width: 50%;
 }
 
+
 .chart{
    margin: 0px 100px 25px 100px;
 }
@@ -516,4 +517,15 @@ h4 {
    margin-right: auto;
    display: block;
    width:50%;
+}
+
+.aboutChartDiv{
+   text-align: center;
+   padding: 25px 0 10px 0;
+}
+.aboutChartHeader{
+   font-size: $caption-size;
+}
+.aboutChart{
+   margin-top: 50px;
 }
