--- a/src/main.scss
+++ b/src/main.scss
@@ -289,14 +289,14 @@ input[type=text], select {
         }
     }
 
-    &__item:nth-of-type(1) {
+    &__item:nth-of-type(2) {
         .about__section {
-            margin-top: 25px;
+            margin-top: 75px;
             margin-bottom: 100px;
             &::before {
                 display: none;
             }
-            &::after {
+            &::before, &::after {
                 content: '';
                 display: block;
                 position: absolute;
@@ -308,7 +308,7 @@ input[type=text], select {
         }
     }
 
-    &__item:nth-of-type(3) {
+    &__item:nth-of-type(4) {
         .about__section {
             margin-top: 100px;
             margin-bottom: 100px;
@@ -327,7 +327,7 @@ input[type=text], select {
         }
     }
 
-    &__item:nth-of-type(4) {
+    &__item:nth-of-type(5) {
         .about__section {
             margin-top: 100px;
             margin-bottom: 100px;
