added text blurb on about page for chart

--- a/src/main.scss
+++ b/src/main.scss
@@ -529,3 +529,11 @@ h4 {
 .aboutChart{
    margin-top: 50px;
 }
+.aboutChartText{
+    text-align: left;
+    font-family: $arial;
+    white-space: pre-wrap;
+    font-size: 17px;
+    padding: 10px 175px 25px 175px;
+
+}
